--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <attr name="icon_checked" format="reference" />
+    <attr name="icon_check_off" format="reference" />
+    <attr name="icon_checked_box" format="reference" />
     <attr name="icon_granted" format="reference" />
     <attr name="icon_help" format="reference" />
     <attr name="icon_info" format="reference" />
