--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -97,23 +97,59 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dip"
                 android:layout_marginRight="3dip"
-                android:orientation="horizontal" >
+                android:orientation="vertical" >
+                
+                <LinearLayout
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:orientation="horizontal" >
+	
+	                <Spinner
+	                    android:id="@+id/spRestriction"
+	                    android:layout_width="0dip"
+	                    android:layout_height="37dip"
+	                    android:layout_weight="1" />
+	
+	                <ImageView
+	                    android:id="@+id/imgInfo"
+	                    android:layout_width="32dip"
+	                    android:layout_height="32dip"
+	                    android:layout_gravity="center_vertical"
+	                    android:clickable="true"
+	                    android:contentDescription="@string/help_application"
+	                    android:focusable="true"
+	                    android:src="?attr/icon_info" />
+	            </LinearLayout>
+                
+                <LinearLayout
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:orientation="horizontal" >
 
-                <Spinner
-                    android:id="@+id/spRestriction"
-                    android:layout_width="0dip"
-                    android:layout_height="37dip"
-                    android:layout_weight="1" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sort_title"
+                   	    android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <ImageView
-                    android:id="@+id/imgInfo"
-                    android:layout_width="32dip"
-                    android:layout_height="32dip"
-                    android:layout_gravity="center_vertical"
-                    android:clickable="true"
-                    android:contentDescription="@string/help_application"
-                    android:focusable="true"
-                    android:src="?attr/icon_info" />
+                    <Spinner
+                        android:id="@+id/spSMode"
+	                    android:layout_width="0dip"
+	                    android:layout_height="37dip"
+	                    android:layout_weight="1"
+	                    android:entries="@array/sort_modes" />
+	            </LinearLayout>
+
+                <CheckBox
+                    android:id="@+id/cbSAttention"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dip"
+                    android:layout_marginLeft="3dip"
+                    android:ellipsize="end"
+                    android:saveEnabled="false"
+                    android:singleLine="true"
+                    android:text="@string/sort_attention"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
             <!-- Filters -->
