Display grayed usage data icon for methods with no usage data
Closes #878

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -8,6 +8,7 @@
     <attr name="icon_info" format="reference" />
     <attr name="icon_internet" format="reference" />
     <attr name="icon_used" format="reference" />
+    <attr name="icon_used_grayed" format="reference" />
     <attr name="icon_system" format="reference" />
     <attr name="icon_user" format="reference" />
     <attr name="icon_user_system" format="reference" />
