--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -6,6 +6,7 @@
         <item name="icon_info">@drawable/info_holo_dark</item>
         <item name="icon_internet">@drawable/internet_holo_dark</item>
         <item name="icon_used">@drawable/used_holo_dark</item>
+        <item name="icon_used_grayed">@drawable/used_holo_dark_grayed</item>
         <item name="icon_system">@drawable/system_holo_dark</item>
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_dark</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_dark</item>
@@ -31,6 +32,7 @@
         <item name="icon_info">@drawable/info_holo_light</item>
         <item name="icon_internet">@drawable/internet_holo_light</item>
         <item name="icon_used">@drawable/used_holo_light</item>
+        <item name="icon_used_grayed">@drawable/used_holo_light_grayed</item>
         <item name="icon_system">@drawable/system_holo_light</item>
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_light</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_light</item>
