--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -230,7 +230,7 @@
                         android:layout_width="24dip"
                         android:layout_height="24dip"
                         android:contentDescription="@string/title_restrict"
-                        android:src="?attr/icon_checked" />
+                        android:src="?attr/icon_restricted" />
 
                     <CheckBox
                         android:id="@+id/cbFRestriction"
