--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -11,9 +11,7 @@
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_dark</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_dark</item>
         <item name="icon_launcher">@drawable/ic_launcher_holo_dark</item>
-        <item name="icon_checked">@drawable/check_holo_dark</item>
-        <item name="icon_check_off">@drawable/check_off_holo_dark</item>
-        <item name="icon_checked_box">@drawable/checked_box_holo_dark</item>
+        <item name="icon_restricted">@drawable/check_holo_dark</item>
         <item name="icon_clear">@drawable/cross_holo_dark</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_dark</item>
         <item name="icon_frozen">@drawable/frozen_holo_dark</item>
@@ -37,9 +35,7 @@
         <item name="icon_expander_minimized">@drawable/expander_ic_minimized_holo_light</item>
         <item name="icon_expander_maximized">@drawable/expander_ic_maximized_holo_light</item>
         <item name="icon_launcher">@drawable/ic_launcher_holo_light</item>
-        <item name="icon_checked">@drawable/check_holo_light</item>
-        <item name="icon_check_off">@drawable/check_off_holo_light</item>
-        <item name="icon_checked_box">@drawable/checked_box_holo_light</item>
+        <item name="icon_restricted">@drawable/check_holo_light</item>
         <item name="icon_clear">@drawable/cross_holo_light</item>
         <item name="icon_clear_grayed">@drawable/cross_grayed_out_holo_light</item>
         <item name="icon_frozen">@drawable/frozen_holo_light</item>
