Make list view non selectable

--- a/res/layout/mainlist.xml
+++ b/res/layout/mainlist.xml
@@ -396,7 +396,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/activity_horizontal_margin_list"
             android:layout_marginTop="6dip"
-            android:choiceMode="multipleChoice"
+            android:choiceMode="none"
             android:paddingRight="12dip"
             android:scrollbarStyle="insideInset" />
 
