--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -11,84 +11,91 @@
         android:background="@android:color/transparent"
         android:paddingRight="3dip" />
 
-    <ImageView
-        android:id="@+id/imgIcon"
-        android:layout_width="?android:attr/listPreferredItemHeightSmall"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:contentDescription="@string/help_application"
-        android:paddingLeft="6dip" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingLeft="6dip" >
-
-        <ImageView
-            android:id="@+id/imgUsed"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:contentDescription="@string/help_used"
-            android:src="?attr/icon_used" />
-
-        <ImageView
-            android:id="@+id/imgGranted"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:contentDescription="@string/help_granted"
-            android:src="?attr/icon_granted" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/imgInternet"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:contentDescription="@string/help_internet"
-            android:src="?attr/icon_internet" />
-
-        <ImageView
-            android:id="@+id/imgFrozen"
-            android:layout_width="24dip"
-            android:layout_height="24dip"
-            android:contentDescription="@string/help_application"
-            android:src="?attr/icon_frozen" />
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlName"
+        android:id="@+id/llAppType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/list_item_pressed"
-        android:clickable="true"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:paddingLeft="6dip" >
+        android:orientation="horizontal" >
 
         <ImageView
-            android:id="@+id/imgCBName"
-            android:layout_width="32dip"
-            android:layout_height="32dip"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="3dip"
-            android:layout_marginRight="6dip"
-            android:contentDescription="@string/title_restrict"
-            android:visibility="invisible" />
+            android:id="@+id/imgIcon"
+            android:layout_width="?android:attr/listPreferredItemHeightSmall"
+            android:layout_height="?android:attr/listPreferredItemHeightSmall"
+            android:contentDescription="@string/help_application"
+            android:paddingLeft="6dip" />
 
-        <TextView
-            android:id="@+id/tvName"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="6dip" >
+
+            <ImageView
+                android:id="@+id/imgUsed"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:contentDescription="@string/help_used"
+                android:src="?attr/icon_used" />
+
+            <ImageView
+                android:id="@+id/imgGranted"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:contentDescription="@string/help_granted"
+                android:src="?attr/icon_granted" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imgInternet"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:contentDescription="@string/help_internet"
+                android:src="?attr/icon_internet" />
+
+            <ImageView
+                android:id="@+id/imgFrozen"
+                android:layout_width="24dip"
+                android:layout_height="24dip"
+                android:contentDescription="@string/help_application"
+                android:src="?attr/icon_frozen" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgCBName"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
+            android:background="@drawable/list_item_pressed"
+            android:clickable="true"
+            android:minHeight="?android:attr/listPreferredItemHeightSmall"
+            android:paddingLeft="6dip" >
+
+            <ImageView
+                android:id="@+id/imgCBName"
+                android:layout_width="32dip"
+                android:layout_height="32dip"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="6dip"
+                android:contentDescription="@string/title_restrict"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/imgCBName"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
