--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,6 +7,11 @@
         android:showAsAction="always"
         android:title="@string/menu_help"/>
     <item
+        android:id="@+id/menu_select_all"
+        android:icon="@drawable/icon_select_all"
+        android:showAsAction="always"
+        android:title="@string/menu_select_all"/>
+    <item
         android:id="@+id/menu_tutorial"
         android:title="@string/menu_tutorial"/>
     <item
