--- a/res/menu/app.xml
+++ b/res/menu/app.xml
@@ -19,6 +19,10 @@
         android:id="@+id/menu_usage"
         android:title="@string/menu_usage"/>
     <item
+        android:id="@+id/menu_import"
+        android:title="@string/menu_import"
+        android:visible="true"/>
+    <item
         android:id="@+id/menu_submit"
         android:title="@string/menu_submit"
         android:visible="true"/>
