--- a/res/layout/shareentry.xml
+++ b/res/layout/shareentry.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
@@ -18,6 +18,13 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textIsSelectable="false" />
 
+    <TextView
+        android:id="@+id/tvError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textIsSelectable="false" />
+
     <ImageView
         android:id="@+id/imgResult"
         android:layout_width="?android:attr/listPreferredItemHeightSmall"
@@ -26,11 +33,11 @@
         android:visibility="gone" />
 
     <ProgressBar
-        android:id="@+id/pbFilter"
+        android:id="@+id/pbRunning"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
