--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -8,7 +8,8 @@
     <ListView
         android:id="@+id/lvShare"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dip"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
