--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -48,6 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="@string/app_help"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
