--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -83,6 +83,13 @@
                 android:layout_marginLeft="30dip"
                 android:text="@string/settings_experimental" />
 
+            <CheckBox
+                android:id="@+id/cbHttps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dip"
+                android:text="@string/settings_https" />
+
             <LinearLayout
                 android:id="@+id/llConfidence"
                 android:layout_width="match_parent"
