Move import file chooser to ActivityShare

--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -13,7 +13,7 @@
 
     <View
         android:id="@+id/vShareProgressFull"
-        android:layout_width="100dip"
+        android:layout_width="0dip"
         android:layout_height="3dip"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -31,6 +31,8 @@
             android:id="@+id/tvDescription"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
+	        android:layout_marginLeft="8dp"
+	        android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -71,7 +73,7 @@
     <ListView
         android:id="@+id/lvShare"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/llDescription"
         android:layout_above="@id/llButtons" />
 
