--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -41,19 +41,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Choose"
+            android:text="@string/menu_choose"
             android:visibility="gone" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <LinearLayout style="?android:attr/buttonBarButtonStyle"
         android:id="@+id/llButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true" >
 
-        <Button
+        <Button style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/btnCancel"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
             android:layout_weight="1"
             android:text="@android:string/cancel" />
 
-        <Button
+        <Button style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/btnOk"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
