--- a/res/layout/sharelist.xml
+++ b/res/layout/sharelist.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".ActivityShare" >
 
     <View
         android:id="@+id/vShareProgressEmpty"
@@ -95,6 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/vBorder"
-        android:layout_below="@id/llDescription" />
+        android:layout_below="@id/llDescription"
+        android:scrollbarStyle="insideInset" />
 
 </RelativeLayout>
