--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -8,8 +8,7 @@
         android:id="@+id/vwState"
         android:layout_width="6dip"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:paddingRight="3dip" />
+        android:background="@android:color/transparent" />
 
     <LinearLayout
         android:id="@+id/llAppType"
