--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -69,6 +69,16 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/imgCBName"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/tvChosen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/imgCBName"
+            android:text="@string/msg_question"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="invisible" />
     </RelativeLayout>
 
 </LinearLayout>
