--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -62,6 +62,16 @@
             android:visibility="gone" />
 
         <TextView
+            android:id="@+id/tvChosen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="@string/msg_question"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="invisible" />
+
+        <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,16 +79,6 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/imgCBName"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <TextView
-            android:id="@+id/tvChosen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgCBName"
-            android:text="@string/msg_question"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:visibility="invisible" />
     </RelativeLayout>
 
 </LinearLayout>
