--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -52,6 +52,16 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imgCBName_new"
+        android:layout_width="32dip"
+        android:layout_height="32dip"
+        android:layout_gravity="center"
+        android:layout_marginLeft="3dip"
+        android:layout_marginRight="6dip"
+        android:contentDescription="@string/title_restrict"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/tvOnDemand"
         android:layout_width="wrap_content"
